jswt-parser/src/snapshots/jswt_parser__test__parse_empty_block.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_empty_block",
                    module: "module/test_parse_empty_block",
                    start: 0,
                    end: 2,
                    [content]: "{}",
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_empty_block",
                        module: "module/test_parse_empty_block",
                        start: 0,
                        end: 2,
                        [content]: "{}",
                    },
                    source_elements: [
                        Statement(
                            Block(
                                BlockStatement {
                                    span: Span {
                                        file: "test_parse_empty_block",
                                        module: "module/test_parse_empty_block",
                                        start: 0,
                                        end: 2,
                                        [content]: "{}",
                                    },
                                    statements: StatementList {
                                        statements: [],
                                    },
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
    },
}
