jswt-parser/src/snapshots/jswt_parser__test__parse_empty_program.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Program {
    source_elements: SourceElements {
        source_elements: [],
    },
}
