jswt-parser/src/snapshots/jswt_parser__test__parse_empty_statement.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_empty_statement",
                    module: "module/test_parse_empty_statement",
                    start: 0,
                    end: 1,
                    [content]: ";",
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_empty_statement",
                        module: "module/test_parse_empty_statement",
                        start: 0,
                        end: 1,
                        [content]: ";",
                    },
                    source_elements: [
                        Statement(
                            Empty(
                                EmptyStatement {
                                    span: Span {
                                        file: "test_parse_empty_statement",
                                        module: "module/test_parse_empty_statement",
                                        start: 0,
                                        end: 1,
                                        [content]: ";",
                                    },
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
    },
}
