jswt-parser/src/snapshots/jswt_parser__test__parse_expression_statement_parses_function_invocation.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_expression_statement_parses_function_invocation",
                    module: "module/test_parse_expression_statement_parses_function_invocation",
                    start: 0,
                    end: 34,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_expression_statement_parses_function_invocation",
                        module: "module/test_parse_expression_statement_parses_function_invocation",
                        start: 0,
                        end: 34,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_expression_statement_parses_function_invocation",
                                    module: "module/test_parse_expression_statement_parses_function_invocation",
                                    start: 0,
                                    end: 34,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: true,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_expression_statement_parses_function_invocation",
                                        module: "module/test_parse_expression_statement_parses_function_invocation",
                                        start: 16,
                                        end: 20,
                                    },
                                    value: "main",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_expression_statement_parses_function_invocation",
                                        module: "module/test_parse_expression_statement_parses_function_invocation",
                                        start: 20,
                                        end: 22,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_expression_statement_parses_function_invocation",
                                        module: "module/test_parse_expression_statement_parses_function_invocation",
                                        start: 23,
                                        end: 34,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "test_parse_expression_statement_parses_function_invocation",
                                                        module: "module/test_parse_expression_statement_parses_function_invocation",
                                                        start: 25,
                                                        end: 32,
                                                    },
                                                    expression: Arguments(
                                                        ArgumentsExpression {
                                                            span: Span {
                                                                file: "test_parse_expression_statement_parses_function_invocation",
                                                                module: "module/test_parse_expression_statement_parses_function_invocation",
                                                                start: 25,
                                                                end: 31,
                                                            },
                                                            ident: Identifier(
                                                                IdentifierExpression {
                                                                    span: Span {
                                                                        file: "test_parse_expression_statement_parses_function_invocation",
                                                                        module: "module/test_parse_expression_statement_parses_function_invocation",
                                                                        start: 25,
                                                                        end: 29,
                                                                    },
                                                                    ident: Identifier {
                                                                        span: Span {
                                                                            file: "test_parse_expression_statement_parses_function_invocation",
                                                                            module: "module/test_parse_expression_statement_parses_function_invocation",
                                                                            start: 25,
                                                                            end: 29,
                                                                        },
                                                                        value: "test",
                                                                    },
                                                                },
                                                            ),
                                                            arguments: ArgumentsList {
                                                                span: Span {
                                                                    file: "test_parse_expression_statement_parses_function_invocation",
                                                                    module: "module/test_parse_expression_statement_parses_function_invocation",
                                                                    start: 29,
                                                                    end: 31,
                                                                },
                                                                arguments: [],
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
