jswt-parser/src/snapshots/jswt_parser__test__parse_function_declaration_statement_with_two_params_and_return_value.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        source_elements: SourceElements {
            source_elements: [
                FunctionDeclaration(
                    FunctionDeclarationElement {
                        span: Span {
                            file: "test.1",
                            start: 0,
                            end: 38,
                        },
                        decorators: FunctionDecorators {
                            annotations: [],
                            export: false,
                        },
                        ident: Identifier {
                            span: Span {
                                file: "test.1",
                                start: 9,
                                end: 13,
                            },
                            value: "test",
                        },
                        params: FormalParameterList {
                            parameters: [
                                FormalParameterArg {
                                    ident: Identifier {
                                        span: Span {
                                            file: "test.1",
                                            start: 14,
                                            end: 15,
                                        },
                                        value: "a",
                                    },
                                    type_annotation: TypeAnnotation {
                                        span: Span {
                                            file: "test.1",
                                            start: 17,
                                            end: 20,
                                        },
                                        ty: Primitive(
                                            I32,
                                        ),
                                    },
                                },
                                FormalParameterArg {
                                    ident: Identifier {
                                        span: Span {
                                            file: "test.1",
                                            start: 22,
                                            end: 23,
                                        },
                                        value: "b",
                                    },
                                    type_annotation: TypeAnnotation {
                                        span: Span {
                                            file: "test.1",
                                            start: 25,
                                            end: 28,
                                        },
                                        ty: Primitive(
                                            I32,
                                        ),
                                    },
                                },
                            ],
                        },
                        returns: Some(
                            TypeAnnotation {
                                span: Span {
                                    file: "test.1",
                                    start: 31,
                                    end: 34,
                                },
                                ty: Primitive(
                                    I32,
                                ),
                            },
                        ),
                        body: FunctionBody {
                            span: Span {
                                file: "test.1",
                                start: 35,
                                end: 38,
                            },
                            source_elements: SourceElements {
                                source_elements: [],
                            },
                        },
                    },
                ),
            ],
        },
    },
}
