jswt-parser/src/snapshots/jswt_parser__test__parse_function_with_multiple_annotations.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        source_elements: SourceElements {
            source_elements: [
                FunctionDeclaration(
                    FunctionDeclarationElement {
                        span: Span {
                            file: "test.1",
                            module: "module/test.1",
                            start: 22,
                            end: 37,
                        },
                        decorators: FunctionDecorators {
                            annotations: [
                                Annotation {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 0,
                                        end: 7,
                                    },
                                    name: Identifier {
                                        span: Span {
                                            file: "test.1",
                                            module: "module/test.1",
                                            start: 1,
                                            end: 7,
                                        },
                                        value: "inline",
                                    },
                                    expr: None,
                                },
                                Annotation {
                                    span: Span {
                                        file: "test.1",
                                        module: "module/test.1",
                                        start: 8,
                                        end: 21,
                                    },
                                    name: Identifier {
                                        span: Span {
                                            file: "test.1",
                                            module: "module/test.1",
                                            start: 9,
                                            end: 13,
                                        },
                                        value: "wast",
                                    },
                                    expr: Some(
                                        Literal(
                                            String(
                                                StringLiteral {
                                                    span: Span {
                                                        file: "test.1",
                                                        module: "module/test.1",
                                                        start: 14,
                                                        end: 20,
                                                    },
                                                    value: "test",
                                                },
                                            ),
                                        ),
                                    ),
                                },
                            ],
                            export: false,
                        },
                        ident: Identifier {
                            span: Span {
                                file: "test.1",
                                module: "module/test.1",
                                start: 31,
                                end: 32,
                            },
                            value: "a",
                        },
                        params: FormalParameterList {
                            parameters: [],
                        },
                        returns: None,
                        body: FunctionBody {
                            span: Span {
                                file: "test.1",
                                module: "module/test.1",
                                start: 35,
                                end: 37,
                            },
                            source_elements: SourceElements {
                                source_elements: [],
                            },
                        },
                    },
                ),
            ],
        },
    },
}
